--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Sagittal_Average/tests/__pycache__
 
 Sagittal_Average/tests/brain_average.csv
 Sagittal_Average/tests/brain_sample.csv
+
+brain_sample.csv
+brain_average.csv
